# apps/api/src/auth/dto/login-response.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class LoginResponseDto {
+  @ApiProperty({ type: String, format: 'date-time' })
+  accessTokenExpiresAt!: string;
+
+  @ApiProperty({ type: String, format: 'date-time' })
+  refreshTokenExpiresAt!: string;
+}
